--- a/pom.xml
+++ b/pom.xml
@@ -49,10 +49,15 @@
 			<version>1.3.1</version>
 		</dependency>
 		<!-- mybatis plus -->
-		<dependency>
+		<!--<dependency>
 			<groupId>com.baomidou</groupId>
 			<artifactId>mybatis-plus</artifactId>
-			<version>2.1.9</version>
+			<version>3.0.4</version>
+		</dependency>-->
+		<dependency>
+			<groupId>com.baomidou</groupId>
+			<artifactId>mybatis-plus-boot-starter</artifactId>
+			<version>3.0.4</version>
 		</dependency>
 		<!-- swagger -->
 		<dependency>
@@ -65,7 +70,16 @@
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>2.7.0</version>
 		</dependency>
-
+		<!-- junit -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+		</dependency>
+		<!-- freemarker -->
+		<dependency>
+			<groupId>org.freemarker</groupId>
+			<artifactId>freemarker</artifactId>
+		</dependency>
 
 
 	</dependencies>
