--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,8 +3,13 @@ server:
   servlet:
     context-path: /liqihua
 
+mvc:
+  static:
+    dirs: /css,/js,/upload
+    prefix: http://127.0.0.1:${server.port}${server.servlet.context-path}
+
 jdbc:
   driverClassName: com.mysql.cj.jdbc.Driver
-  url: jdbc:mysql://10.1.4.87:3306/liqihua_admin?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&serverTimezone=Hongkong
+  url: jdbc:mysql://127.0.0.1:3306/liqihua_admin?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&serverTimezone=Hongkong
   username: root
   password: 123
