--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,13 +3,23 @@ server:
   servlet:
     context-path: /liqihua
 
+spring:
+  flyway:
+    enabled: true
+    baseline-on-migrate: true
+
 mvc:
   static:
     dirs: /css,/js,/upload
     prefix: http://127.0.0.1:${server.port}${server.servlet.context-path}
+
+jwt:
+  secret: 3MZq0BYyGcXYoXjhS4QbAM+2YdlLCwKRr2gvVJOJ
 
 jdbc:
   driverClassName: com.mysql.cj.jdbc.Driver
   url: jdbc:mysql://127.0.0.1:3306/liqihua_admin?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&serverTimezone=Hongkong
   username: root
   password: 123
+
+
