--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,8 +19,13 @@ jdbc:
   username: root
   password: 123
 
-redisson:
-  conf:
-    location: classpath:redisson.json
+
+
+redis:
+  database: 0
+  host: 127.0.0.1
+  port: 6379
+  password:
+  #clusterConf: classpath:redisson.json #集群模式
 
 
