--- a/pom.xml
+++ b/pom.xml
@@ -156,6 +156,13 @@
 			<artifactId>shiro-spring</artifactId>
 			<version>${version.shiro}</version>
 		</dependency>
+		<!-- lombok -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.6</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
